# openadmin

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
examples/: admin.db  analytics.py  api_keys.py  db.py  emails.py  logs.py  main.py  media.py  notifications.py  orders.py  permissions.py  posts.py  req.py  revenue.py  seed.py  servers.py  support.py  users.py  users_tasks.py  welcome_admin.py
examples/static/: sample_document.txt
src/openadmin/: __init__.py  deps.py  page.py  panel.py  types.py
