[project]
name = "openadmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "The Future Pirate King", email = "kasianenkomykyta@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
